--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0-alpha7'
+        classpath 'com.android.tools.build:gradle:2.0.0-alpha9'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
         classpath "com.fernandocejas.frodo:frodo-plugin:0.8.2"
     }
@@ -14,11 +14,11 @@ buildscript {
 
 allprojects {
     ext {
-        androidApplicationId = 'tomkoptel.sample.template'
+        androidApplicationId = 'android.template'
         androidVersionCode = 1
         androidVersionName = "1.0"
         testInstrumentationRunner = "android.support.test.runner.AndroidJUnitRunner"
-        testApplicationId = 'tomkoptel.sample.template.test'
+        testApplicationId = 'android.template.test'
     }
 }
 
