--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -17,11 +17,14 @@ ext {
     recyclerViewVersion = '21.0.3'
     rxJavaVersion = '1.0.14'
     rxAndroidVersion = '1.0.1'
-    javaxAnnotationVersion = '1.0'
     gsonVersion = '2.4'
-    supportAnnotationsVersion = '21.0.3'
     retrofit2Version = '2.0.0-beta3'
     supportLibVersion = '23.1.1'
+
+    //Annotations
+    supportAnnotationsVersion = '21.0.3'
+    javaxAnnotationVersion = '1.0'
+    intellijAnnotation = '12.0'
 
     //Testing
     robolectricVersion = '3.0'
@@ -32,43 +35,65 @@ ext {
     testingSupportLibVersion = '0.4.1'
     hamcrestLibVersion = '1.3'
 
-    commonDependencies = [
-            daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-            dagger:             "com.google.dagger:dagger:${daggerVersion}",
-            javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            supportAnnotations: "com.android.support:support-annotations:${supportAnnotationsVersion}",
+    daggerDependencies = [
+            daggerCompiler : "com.google.dagger:dagger-compiler:${daggerVersion}",
+            dagger         : "com.google.dagger:dagger:${daggerVersion}",
+            javaxAnnotation: "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
     ]
 
-    presentationDependencies = [
-            butterKnife:        "com.jakewharton:butterknife:${butterKnifeVersion}",
-            recyclerView:       "com.android.support:recyclerview-v7:${supportLibVersion}",
-            appcompatv7:        "com.android.support:appcompat-v7:${supportLibVersion}",
+    unitTestDependencies = [
+            junit   : "junit:junit:${jUnitVersion}",
+            mockito : "org.mockito:mockito-core:${mockitoVersion}",
+            hamcrest: "org.hamcrest:hamcrest-integration:${hamcrestLibVersion}",
+    ]
+
+    domainDependencies = [
+            rxJava            : "io.reactivex:rxjava:${rxJavaVersion}",
+            intellijAnnotation: "com.intellij:annotations:${intellijAnnotation}"
+    ] + daggerDependencies
+
+    domainTestDependencies = [
+            junit   : "junit:junit:${jUnitVersion}",
+            mockito : "org.mockito:mockito-core:${mockitoVersion}",
+            hamcrest: "org.hamcrest:hamcrest-integration:${hamcrestLibVersion}",
     ]
 
     dataDependencies = [
-            gson:                   "com.google.code.gson:gson:${gsonVersion}",
-            rxJava:                 "io.reactivex:rxjava:${rxJavaVersion}",
-            rxAndroid:              "io.reactivex:rxandroid:${rxAndroidVersion}",
-            retrofit2:              "com.squareup.retrofit2:retrofit:${retrofit2Version}",
+            gson                  : "com.google.code.gson:gson:${gsonVersion}",
+            rxJava                : "io.reactivex:rxjava:${rxJavaVersion}",
+            rxAndroid             : "io.reactivex:rxandroid:${rxAndroidVersion}",
+            retrofit2             : "com.squareup.retrofit2:retrofit:${retrofit2Version}",
             retrofit2GsonConverter: "com.squareup.retrofit2:converter-gson:${retrofit2Version}",
-            retrofit2RxAdapter:     "com.squareup.retrofit2:adapter-rxjava:${retrofit2Version}",
-    ]
+            retrofit2RxAdapter    : "com.squareup.retrofit2:adapter-rxjava:${retrofit2Version}",
+
+            supportAnnotations    : "com.android.support:support-annotations:${supportAnnotationsVersion}",
+    ] + daggerDependencies
 
     dataTestDependencies = [
-            junit:              "junit:junit:${jUnitVersion}",
-            mockito:            "org.mockito:mockito-core:${mockitoVersion}",
-            robolectric:        "org.robolectric:robolectric:${robolectricVersion}",
-            hamcrest:           "org.hamcrest:hamcrest-integration:${hamcrestLibVersion}",
+            junit      : "junit:junit:${jUnitVersion}",
+            mockito    : "org.mockito:mockito-core:${mockitoVersion}",
+            robolectric: "org.robolectric:robolectric:${robolectricVersion}",
+            hamcrest   : "org.hamcrest:hamcrest-integration:${hamcrestLibVersion}",
     ]
 
-    presentationTestDependencies = [
-            mockito:            "org.mockito:mockito-core:${mockitoVersion}",
-            hamcrest:           "org.hamcrest:hamcrest-integration:${hamcrestLibVersion}",
-            dexmaker:           "com.google.dexmaker:dexmaker:${dexmakerVersion}",
-            dexmakerMockito:    "com.google.dexmaker:dexmaker-mockito:${dexmakerVersion}",
+    presentationDependencies = [
+            butterKnife       : "com.jakewharton:butterknife:${butterKnifeVersion}",
+            recyclerView      : "com.android.support:recyclerview-v7:${supportLibVersion}",
+            appcompatv7       : "com.android.support:appcompat-v7:${supportLibVersion}",
+            rxJava            : "io.reactivex:rxjava:${rxJavaVersion}",
+            rxAndroid         : "io.reactivex:rxandroid:${rxAndroidVersion}",
 
-            androidTestRules:   "com.android.support.test:rules:${testingSupportLibVersion}",
-            espressoCore:       "com.android.support.test.espresso:espresso-core:${espressoVersion}",
-            espressoIntents:    "com.android.support.test.espresso:espresso-intents:${espressoVersion}",
+            supportAnnotations: "com.android.support:support-annotations:${supportAnnotationsVersion}",
+    ] + daggerDependencies
+
+    presentationTestDependencies = [
+            mockito         : "org.mockito:mockito-core:${mockitoVersion}",
+            dexmaker        : "com.google.dexmaker:dexmaker:${dexmakerVersion}",
+            dexmakerMockito : "com.google.dexmaker:dexmaker-mockito:${dexmakerVersion}",
+            hamcrest        : "org.hamcrest:hamcrest-integration:${hamcrestLibVersion}",
+
+            androidTestRules: "com.android.support.test:rules:${testingSupportLibVersion}",
+            espressoCore    : "com.android.support.test.espresso:espresso-core:${espressoVersion}",
+            espressoIntents : "com.android.support.test.espresso:espresso-intents:${espressoVersion}",
     ]
 }
