--- a/circle.yml
+++ b/circle.yml
@@ -1,18 +1,15 @@
-machine:
-  environment:
-    ANDROID_HOME: /usr/local/android-sdk-linux
-    GRADLE_OPTS: -Xmx512m
-
 dependencies:
-  post:
-    - echo y | android update sdk --no-ui --all --filter "platform-tools,build-tools-23.0.3,android-23,sys-img-armeabi-v7a-android-23,extra-android-support,extra-google-google_play_services,extra-google-m2repository,extra-android-m2repository"
-    -  echo n | android create avd -n testing -f -t android-23
+  pre:
+    - echo y | android update sdk --no-ui --all --filter "platform-tools"
+    - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.3"
+    - echo y | android update sdk --no-ui --all --filter "extra-android-support"
+    - echo y | android update sdk --no-ui --all --filter "extra-google-google_play_services"
+    - echo y | android update sdk --no-ui --all --filter "extra-google-m2repository"
+    - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
 
 test:
-  override:
-    - $ANDROID_HOME/tools/emulator -avd testing -no-window -no-boot-anim -no-audio:
+  pre:
+    - emulator -avd circleci-android22 -no-audio -no-window:
         background: true
         parallel: true
-    - ./gradlew assembleDebug
-    - bin/android-wait-for-emulator
-    - bin/run-tests test.namespace
+    - circle-android wait-for-boot
