--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            testCoverageEnabled = true
         }
     }
 
