--- a/circle.yml
+++ b/circle.yml
@@ -13,3 +13,18 @@ test:
         background: true
         parallel: true
     - circle-android wait-for-boot
+    - adb shell input keyevent 82
+    - adb shell svc power stayon true
+    - adb shell settings put global window_animation_scale 0
+    - adb shell settings put global transition_animation_scale 0
+    - adb shell settings put global animator_duration_scale 0
+
+  override:
+    - ./gradlew createMockDebugCoverageReport
+    - ./gradlew test
+
+  post:
+    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+    - cp -r app/build/outputs/androidTest-results/ $CIRCLE_TEST_REPORTS
+    - cp -r app/build/reports/coverage/ $CIRCLE_TEST_REPORTS
+    - cp -r app/build/test-results/mockDebug/ $CIRCLE_TEST_REPORTS
