Enable build cache option

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ android {
             minSdkVersion globalConfiguration.getAt("androidMinSdkVersion")
         }
     }
+    dexOptions {
+        preDexLibraries = true
+    }
 }
 
 dependencies {
